# zhiyuanbang

./: .env.example  .gitignore  NOTICE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile
backend/app/: config.py  db.py  errors.py  main.py
backend/app/models/: __init__.py  crawl_progress.py  enums.py  major.py  province.py  school.py  score.py
backend/app/routers/: majors.py  recommend.py  schools.py  score_rank.py
backend/app/schemas/: common.py  major.py  recommend.py  school.py
backend/app/services/: recommendation.py
backend/scripts/: crawl_baidu.py  export_openapi.py  export_seed_full.py  fetch_data.py  seed_dev.py
backend/tests/: conftest.py  test_crawl.py  test_enums.py  test_models.py  test_recommend_api.py  test_recommendation.py  test_schools.py  test_score_rank.py  test_smoke.py
data/: import_mysql_to_pg.py  test_parse.py
data/source_sql/: .gitkeep
docs/superpowers/plans/: 2026-06-26-gkvr-stage1-backend.md  (+2 more)
docs/设计稿/: README.md  index.html
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AddToWishlistButton.tsx  EChart.tsx  MobileNav.tsx  RecommendItemCard.tsx  SchoolCard.tsx  SiteFooter.tsx  SiteHeader.tsx  TierBadge.tsx  province-combobox.tsx
frontend/lib/: api.ts  constants.ts  major-categories.ts  store.ts  wishlist.ts
gkvr/: NOTICE
gkvr/backend/: pyproject.toml
gkvr/backend/app/: config.py  main.py
(+36 files in other folders)
